# astock-analysis

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
config/: providers.yaml
config/prompts/: speaker.yml  summarizer.yml
config/roles/participants/: fundamental.yml  sentiment.yml  technical.yml
config/roles/summarizers/: strategist.yml
docs/: STRUCTURE.md
docs/agents/: domain.md  triage-labels.md
docs/prd/: 001-roundtable.md
examples/: .fuse_hidden0000000600000002  .fuse_hidden0000000800000003  .fuse_hidden0000000a00000004  .fuse_hidden0000000c00000005  .fuse_hidden0000000e00000006  .fuse_hidden0000001000000007  .fuse_hidden0000001200000008  .fuse_hidden0000001400000009  .fuse_hidden000000180000000b  .fuse_hidden0000001a0000000c  .fuse_hidden000000200000000f  .fuse_hidden0000002400000011  .fuse_hidden0000002800000013  all_dimensions.py  basic_usage.py  block_trade_detail.py  bond_convertible_detail.py  capital_flow_detail.py  concept_detail.py  financials_detail.py  fund_detail.py  futures_detail.py  holder_detail.py  index_detail.py  industry_detail.py  ipo_detail.py  kline_detail.py  lhb_detail.py  margin_detail.py  news_detail.py  north_flow_detail.py  realtime_detail.py  report_600105.py  sentiment_detail.py  stock_info_detail.py  test.md
src/astock_analysis/: __init__.py
src/llm/: client.py
src/market_data/: __init__.py
src/market_data/core/: cache.py  (+1 more)
src/roundtable/: __init__.py  __main__.py  data_fetcher.py  md_render.py  role_loader.py  state.py
tests/: test_core.py  test_roundtable.py
(+64 files in other folders)
